// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request all 1`] = `
Array [
  "/projects",
  Object {
    "simple": true,
  },
]
`;

exports[`request all 2`] = `
Array [
  Array [
    "/projects",
    Object {
      "simple": true,
    },
  ],
]
`;

exports[`request all with opts 1`] = `
Array [
  "/projects",
  Object {
    "owned": true,
    "simple": false,
  },
]
`;

exports[`request all with opts 2`] = `
Array [
  Array [
    "/projects",
    Object {
      "owned": true,
      "simple": false,
    },
  ],
]
`;

exports[`request owned 1`] = `
Array [
  "/users/userId/projects",
  Object {
    "simple": true,
  },
]
`;

exports[`request owned 2`] = `
Array [
  Array [
    "/users/userId/projects",
    Object {
      "simple": true,
    },
  ],
]
`;

exports[`request owned, no params 1`] = `undefined`;
